--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -27,11 +27,6 @@ a {
   box-shadow: 0px 0px 8px 2px #c8c8c8;
 }
 
-/* .navallitem > div{
-  position: relative;
-  justify-content: space-between;
-} */
-
 .logo {
   color: #707070;
   margin-left: 0;
@@ -76,7 +71,7 @@ a {
 }
 .navitems > a {
   text-decoration: none;
-  color: #707070;
+  color: #707070 !important;
   margin-right: 40px;
   padding-bottom: 5px;
   width: 100%;
