Creation and deletion of organization can be done now (#124)
* main-navbar sidebar

* updated css files

* recreated organisation page

* updated file

* update css file

* main user page

* conflicts resolved

* login changes

* super admin list

* fixed style issue

* 2 pages

* component card list

* adding dashboard page

* adding people

* issues resolved

* conflict issue solved

* conflict issue solved

* made login working

* put error handling

* changes

* ss

* Update src/App.tsx

Co-authored-by: Jason Gayle <55003601+DangaRanga@users.noreply.github.com>

* Revert "Update src/App.tsx"

This reverts commit 2fb5ed82563356ec4896e7686f1b99bbcb0022e5.

* retrievals of data and list

* test

* changes

* events now can be seen

* creation of organization done

* fixed navbar

* ss

* deletion of organization done

Co-authored-by: ssaumyaa7 <saumya4799@gmail.com>
Co-authored-by: ssaumyaa7 <64359826+ssaumyaa7@users.noreply.github.com>
Co-authored-by: Jason Gayle <55003601+DangaRanga@users.noreply.github.com>

--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -27,11 +27,6 @@ a {
   box-shadow: 0px 0px 8px 2px #c8c8c8;
 }
 
-/* .navallitem > div{
-  position: relative;
-  justify-content: space-between;
-} */
-
 .logo {
   color: #707070;
   margin-left: 0;
@@ -75,23 +70,23 @@ a {
   font-size: 16px;
 }
 .navitems > a {
-  text-decoration: none;
-  color: #707070;
   margin-right: 40px;
   padding-bottom: 5px;
   width: 100%;
   z-index: 1;
+  flex-direction: row;
+  display: flex;
+}
+
+.navitem {
+  text-decoration: none;
+  color: #707070 !important;
   transition: smooth;
 }
-.navitems > a:hover {
+.navitem:hover {
   text-decoration: none;
   border-bottom: 3px solid #31bb6b;
   font-weight: 600;
-}
-
-.navitems:active {
-  padding-bottom: 5px;
-  border-bottom: 3px solid #31bb6b;
 }
 
 @media screen and (max-width: 1024px) {
