--- a/src/screens/OrgList/OrgList.module.css
+++ b/src/screens/OrgList/OrgList.module.css
@@ -9,8 +9,7 @@
   justify-content: space-between;
   box-shadow: 0px 0px 8px 2px #c8c8c8;
 }
-.titlemodal
-.logo {
+.titlemodal .logo {
   color: #707070;
   margin-left: 0;
   display: flex;
