--- a/src/screens/OrganizationEvents/OrganizationEvents.module.css
+++ b/src/screens/OrganizationEvents/OrganizationEvents.module.css
@@ -172,7 +172,15 @@ form > label {
   font-size: 14px;
   color: #707070;
 }
-
+.titlemodal {
+  color: #707070;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+  padding-bottom: 5px;
+  border-bottom: 3px solid #31bb6b;
+  width: 65%;
+}
 form > input {
   display: block;
   margin-bottom: 20px;
@@ -199,7 +207,7 @@ form > input {
 }
 .greenregbtn {
   margin: 1rem 0 0;
-  margin-top: 10px;
+  margin-top: 15px;
   border: 1px solid #e8e5e5;
   box-shadow: 0 2px 2px #e8e5e5;
   padding: 10px 10px;
@@ -226,7 +234,28 @@ form > input {
   padding-left: 10px;
   box-shadow: none;
 }
-
+.datediv {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 15px;
+}
+.datebox {
+  width: 90%;
+  border-radius: 7px;
+  border-color: #e8e5e5;
+  outline: none;
+  box-shadow: none;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+.checkboxdiv > label {
+  margin-right: 50px;
+}
+.checkboxdiv > label > input {
+  margin-left: 10px;
+}
 .loader,
 .loader:after {
   border-radius: 50%;
