--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -81,6 +81,13 @@ a {
   font-size: 16px;
   color: #707070;
   z-index: 1;
+  flex-direction: row;
+  display: flex;
+}
+
+.navitem {
+  text-decoration: none;
+  color: #707070 !important;
   transition: smooth;
   padding-bottom: 10px;
 }
@@ -115,7 +122,7 @@ a {
     margin-right: 20px;
   }
 }
-/* .sidebar {
+.sidebar {
   z-index: 0;
   padding-top: 50px;
   position: fixed;
@@ -127,28 +134,6 @@ a {
 }
 .sidebarsticky {
   padding-top: 40%;
-}
-.navitem {
-  padding-left: 27%;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  cursor: pointer;
-}
-.navitem:hover {
-  border-left: 4px solid black;
-  z-index: 1;
-  background-color: #f7f7f7;
-  box-shadow: 2px 2px 8px 2px #c8c8c8;
-}
-.navitem:target {
-  z-index: 1;
-  background-color: #f7f7f7;
-  box-shadow: 2px 2px 2px 2px #c8c8c8;
-}
-.naviteminside {
-  font-size: 17px;
-  font-weight: 600;
-  color: black;
 }
 @media screen and (max-width: 768px) {
   .sidebar {
@@ -162,4 +147,4 @@ a {
   .logo {
     margin-left: 0%;
   }
-} */
+}
