--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,7 @@
 html {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
+
 .background {
   height: 100vh;
   width: 100vw;
@@ -12,7 +13,6 @@ html {
 
 /* Buttons */
 .btn {
-  background-color: #febc59;
   padding: 0.5em 1em;
   font-size: 16px;
   color: #000;
