--- a/src/screens/OrganizationEvents/OrganizationEvents.module.css
+++ b/src/screens/OrganizationEvents/OrganizationEvents.module.css
@@ -298,3 +298,18 @@ form > input {
     transform: rotate(360deg);
   }
 }
+.dispflex {
+  display: flex;
+}
+.dispflex > input {
+  width: 20%;
+  border: none;
+  box-shadow: none;
+  margin-top: 5px;
+}
+.checkboxdiv {
+  display: flex;
+}
+.checkboxdiv > div {
+  width: 50%;
+}
