--- a/src/components/AddOn/core/AddOnEntry/AddOnEntry.module.css
+++ b/src/components/AddOn/core/AddOnEntry/AddOnEntry.module.css
@@ -12,3 +12,9 @@
 .entryaction i{
     margin-right: 8px;
 }
+
+.entryaction .spinner-grow{
+    height: 1rem;
+    width: 1rem;
+    margin-right: 8px;
+}
