--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -117,6 +117,16 @@ a {
   box-shadow: none !important;
 }
 
+.dropdowntoggle {
+  display: flex !important;
+  align-items: center !important;
+  margin-top: 8px;
+}
+
+.dropdownitem i {
+  margin-right: 8px;
+}
+
 @media screen and (max-width: 1024px) {
   .logo > strong {
     display: none;
