--- a/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
+++ b/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
@@ -90,14 +90,19 @@
   box-shadow: 0 2px 2px #e8e5e5;
   border-radius: 5px;
   background-color: #31bb6b;
-  width: 20%;
-  height: 40px;
-  font-size: 16px;
-  color: white;
+  width: 100%;
+  height: 100%;
+  font-size: 25px;
   outline: none;
   font-weight: 600;
   cursor: pointer;
   transition: transform 0.2s, box-shadow 0.2s;
+
+}
+
+.icon 
+{
+  size: 20px;
 }
 .flexdir {
   display: flex;
@@ -139,6 +144,30 @@
   cursor: pointer;
   transition: transform 0.2s, box-shadow 0.2s;
   width: 100%;
+}
+
+.invitebtn {
+  
+  border: 1px solid #e8e5e5;
+  box-shadow: 0 2px 2px #e8e5e5;
+  border-radius: 5px;
+  background-color: #31bb6b;
+  width: 55%;
+  margin-left: 55px;
+  height: 42px;
+  font-size: 16px;
+  color: white;
+
+  outline: none;
+  font-weight: 600;
+  cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.icon 
+{
+  margin-right: 8px;
+  margin-left: 10px;
 }
 
 .loader,
