--- a/src/screens/OrgPost/OrgPost.module.css
+++ b/src/screens/OrgPost/OrgPost.module.css
@@ -126,10 +126,8 @@
   border: 1px solid #e8e5e5;
   box-shadow: 0 2px 2px #e8e5e5;
   border-radius: 5px;
-  background-color: #31bb6b;
-  width: 15%;
-  height: 40px;
   font-size: 16px;
+  height: 60%;
   color: white;
   outline: none;
   font-weight: 600;
@@ -222,21 +220,17 @@ textarea {
   width: 50px;
 }
 .greenregbtn {
-  margin: 1rem 0 0;
-  margin-top: 10px;
   border: 1px solid #e8e5e5;
   box-shadow: 0 2px 2px #e8e5e5;
-  padding: 10px 10px;
   border-radius: 5px;
   background-color: #31bb6b;
-  width: 100%;
   font-size: 16px;
+  height: 60%;
   color: white;
   outline: none;
   font-weight: 600;
   cursor: pointer;
   transition: transform 0.2s, box-shadow 0.2s;
-  width: 100%;
 }
 .sidebarsticky > input {
   text-decoration: none;
