--- a/src/screens/OrganizationEvents/OrganizationEvents.module.css
+++ b/src/screens/OrganizationEvents/OrganizationEvents.module.css
@@ -118,10 +118,8 @@
   border: 1px solid #e8e5e5;
   box-shadow: 0 2px 2px #e8e5e5;
   border-radius: 5px;
-  background-color: #31bb6b;
-  width: 15%;
-  height: 40px;
   font-size: 16px;
+  height: 60%;
   color: white;
   outline: none;
   font-weight: 600;
