--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+body::before {
+  display: block;
+  content: '';
+  height: 85px;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -20,18 +26,8 @@ a {
 .navbarbg {
   height: 60px;
   background-color: white;
-  display: flex;
-  margin-bottom: 30px;
   z-index: 1;
-  position: relative;
-  flex-direction: row;
   box-shadow: 0px 0px 8px 2px #c8c8c8;
-  justify-content: space-between !important;
-}
-
-.navallitem {
-  position: relative;
-  justify-content: space-between;
 }
 
 .logo {
@@ -39,7 +35,7 @@ a {
   margin-left: 0;
   display: flex;
   align-items: center;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .logo img {
@@ -68,15 +64,10 @@ a {
   margin-right: 5px;
   border-radius: 50px;
 }
-.navit {
-  display: flex;
-  margin-left: 50px;
-  margin-top: -3px;
-}
 .navitems > .navlinks {
-  margin-top: 19px;
+  margin-top: 11px;
   cursor: pointer;
-  margin-left: 10px;
+  margin-left: 28px;
   line-height: 1rem;
   font-size: 16px;
   color: #707070;
@@ -107,7 +98,6 @@ a {
   border-bottom: 3px solid #31bb6b;
 } */
 .dropdowns {
-  margin-right: 30px;
   text-decoration: none;
 }
 .dropdownMenu {
@@ -125,7 +115,8 @@ a {
 .dropdowntoggle {
   display: flex !important;
   align-items: center !important;
-  margin-top: 8px;
+  margin-top: 0px;
+  margin-left: 15px;
 }
 
 .dropdownitem i {
@@ -170,3 +161,20 @@ a {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  body::before {
+    height: 118px;
+  }
+  .navbarbg {
+    height: auto;
+  }
+  .navitems > .navlinks {
+    margin-left: 0;
+  }
+  .dropdowntoggle {
+    margin-left: -12px;
+  }
+  .dropdownMenu {
+    transform: translateX(0px) scale(0.9);
+  }
+}
