responsiveness of LoginPage and Orglist page is fixed

--- a/src/screens/LoginPage/LoginPage.module.css
+++ b/src/screens/LoginPage/LoginPage.module.css
@@ -14,6 +14,10 @@ body {
   background-repeat: no-repeat !important;
   background-position: center !important;
   background-size: cover !important;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 .flexdir {
   display: flex;
