🐛 FIX: Enabled Scrolling On register page

--- a/src/screens/LoginPage/LoginPage.module.css
+++ b/src/screens/LoginPage/LoginPage.module.css
@@ -7,6 +7,8 @@ body {
   align-items: left;
 }
 .login_background {
+  overflow-x: hidden;
+  overflow-y: visible;
   background-color: #fcfcfc;
   height: 100%;
   width: 100vw;
