--- a/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
+++ b/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
@@ -64,6 +64,22 @@
   padding-top: 5px;
   padding-bottom: 5px;
 }
+.tagdetailsGreen > button {
+  background-color: green;
+  color: #000;
+  outline: none;
+  cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.2s;
+  border: none;
+  border-radius: 5px;
+  margin-top: -12px;
+  margin-bottom: 10px;
+  margin-right: 30px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
 .mainpageright > hr {
   margin-top: 20px;
   width: 100%;
