--- a/src/screens/OrgList/OrgList.module.css
+++ b/src/screens/OrgList/OrgList.module.css
@@ -1,36 +1,3 @@
-.navbarbg {
-  height: 60px;
-  background-color: white;
-  display: flex;
-  margin-bottom: 30px;
-  z-index: 1;
-  position: relative;
-  flex-direction: row;
-  justify-content: space-between !important;
-  box-shadow: 0px 0px 8px 2px #c8c8c8;
-}
-.titlemodal .logo {
-  color: #707070;
-  margin-left: 0;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-}
-
-.logo img {
-  margin-top: 0px;
-  margin-left: 10px;
-  height: 64px;
-  width: 70px;
-}
-
-.logo > strong {
-  line-height: 1.5rem;
-  margin-left: -5px;
-  font-family: sans-serif;
-  font-size: 19px;
-  color: #707070;
-}
 .mainpage {
   display: flex;
   flex-direction: row;
@@ -63,6 +30,30 @@
   padding-top: 12px;
   padding-bottom: 12px;
   cursor: pointer;
+}
+
+.searchtitle {
+  color: #707070;
+  font-weight: 600;
+  font-size: 18px;
+  margin-top: 60px;
+  margin-bottom: 20px;
+  padding-bottom: 5px;
+  border-bottom: 3px solid #31bb6b;
+  width: 60%;
+}
+
+.sidebarsticky > input {
+  text-decoration: none;
+  margin-bottom: 50px;
+  border-color: #e8e5e5;
+  width: 80%;
+  border-radius: 7px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  box-shadow: none;
 }
 
 .logintitle {
@@ -148,6 +139,8 @@
   border-color: #e8e5e5;
   border-width: 5px;
   border-radius: 10px;
+  max-height: 86vh;
+  overflow: auto;
 }
 
 .form_wrapper form {
@@ -273,7 +266,7 @@ form > input {
 }
 .list_box {
   height: 70vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: auto;
   padding-right: 50px;
 }
@@ -313,18 +306,20 @@ form > input {
   width: 50%;
 }
 
-.logoutbtn {
-  border: 1px solid #e8e5e5;
-  box-shadow: 0 2px 2px #e8e5e5;
-  border-radius: 5px;
-  background-color: #31bb6b;
-  height: 40px;
-  font-size: 16px;
-  color: white;
-  outline: none;
-  font-weight: 600;
-  cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s;
-  padding: 0 20px;
-  margin-right: 10px;
+@media only screen and (max-width: 600px) {
+  .sidebar {
+    position: relative;
+    bottom: 18px;
+  }
+  .invitebtn {
+    width: 135px;
+    position: relative;
+    right: 10px;
+  }
+  .form_wrapper {
+    width: 90%;
+  }
+  .searchtitle {
+    margin-top: 30px;
+  }
 }
