--- a/src/screens/OrgPost/OrgPost.module.css
+++ b/src/screens/OrgPost/OrgPost.module.css
@@ -1,10 +1,3 @@
-.grid_section_div {
-  grid-gap: 10px;
-  display: grid;
-  background-color: #fff;
-  color: #444;
-  grid-template-columns: 2fr 2fr;
-}
 .navbarbg {
   height: 60px;
   background-color: white;
@@ -297,5 +290,16 @@ textarea {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
+  }
+}
+.list_box {
+  height: 70vh;
+  overflow-y: auto;
+  width: auto;
+}
+@media only screen and (max-width: 600px) {
+  .form_wrapper {
+    width: 90%;
+    top: 45%;
   }
 }
