Navbar made fully functional for all the screens. (#387)
* Changes added to navbar

* Update LoginPage.tsx

Forgot to undo the non-required changes

* Update LoginPage.tsx

* save before clone remote repo

* Added snapshot testing

* anurag

* Revert "save before clone remote repo"

This reverts commit 5adcfde1fbcb4604c9812f8d00a0e6e55af21fcc.

* 1

* the code containing tests along with fixes in navbar

* css tests which were giving error for the PR have been removed

* Mistakenly added talawa-admin folder is removed

--- a/src/components/ListNavbar/ListNavbar.module.css
+++ b/src/components/ListNavbar/ListNavbar.module.css
@@ -1,5 +1,6 @@
 .navbarbgOrglist {
-  height: 60px;
+  /* height:60px;  */
+  padding:0 1rem;
   background-color: white;
   display: flex;
   margin-bottom: 30px;
@@ -13,6 +14,11 @@
   right: 0;
   left: 0;
   z-index: 1030;
+}
+
+.navbarBrand{
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .titlemodal .logo {
