added the hovering effect to the buttons which were not under the hovering effect + made the coloring scheme consistant for all the buttons which had different colors

--- a/src/components/ListNavbar/ListNavbar.module.css
+++ b/src/components/ListNavbar/ListNavbar.module.css
@@ -91,6 +91,11 @@
   padding: 0 20px;
   margin-right: 10px;
 }
+.logoutbtn:hover{
+  color: #fff;
+  background-color: #1e7e34;
+  border-color: #1c7430;
+}
 
 @media only screen and (max-width: 600px) {
   body::before {
