--- a/src/screens/ForgotPassword/ForgotPassword.module.css
+++ b/src/screens/ForgotPassword/ForgotPassword.module.css
@@ -5,6 +5,10 @@
   color: #31bb6b;
 }
 
+.talawaBackgroundColor{
+background-color:#31bb6b;;
+}
+
 @media only screen and (max-width: 600px) {
   .forgotPassword .border {
     position: relative;
