Lint and format files

--- a/src/screens/ForgotPassword/ForgotPassword.module.css
+++ b/src/screens/ForgotPassword/ForgotPassword.module.css
@@ -5,8 +5,8 @@
   color: #31bb6b;
 }
 
-.talawaBackgroundColor{
-background-color:#31bb6b;;
+.talawaBackgroundColor {
+  background-color: #31bb6b;
 }
 
 @media only screen and (max-width: 600px) {
