--- a/src/screens/OrgList/OrgList.module.css
+++ b/src/screens/OrgList/OrgList.module.css
@@ -52,18 +52,19 @@
   width: 60%;
 }
 
-.sidebarsticky > input {
-  text-decoration: none;
-  margin-bottom: 50px;
-  border-color: #e8e5e5;
-  width: 80%;
-  border-radius: 7px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 10px;
-  padding-left: 10px;
-  box-shadow: none;
-}
+.justifysp > input {
+    text-decoration: none;
+    margin-bottom: 50px;
+    border-color: #dbd7d7;
+    border-style: solid;
+    width: 35%;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
+    box-shadow: none;
+  }
 
 .logintitle {
   color: #707070;
