--- a/src/screens/LoginPage/LoginPage.module.css
+++ b/src/screens/LoginPage/LoginPage.module.css
@@ -357,6 +357,13 @@ form > br {
   box-shadow: 1px 3px #e8e5e5;
 }
 
+.noaccount {
+  text-align: center;
+  color: #707070;
+  font-size: 11px;
+  margin-top: 10px;
+}
+
 @media only screen and (max-width: 600px) {
   body::before {
     height: 118px;
