align navbar items

--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -78,6 +78,7 @@ a {
   z-index: 1;
   flex-direction: row;
   display: flex;
+  text-align: center;
 }
 .navlinks_active {
   border-bottom: 3px solid #31bb6b;
@@ -221,10 +222,24 @@ a {
   border-radius: 10px;
   font-weight: 600;
   white-space: nowrap;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  min-width: 10rem;
+  max-width: 30%;
 }
 
 .allOrgBtn:hover {
   color: #fff;
   background-color: #1e7e34;
   border-color: #1c7430;
+}
+
+.navitems > .navlinks {
+  justify-content: center;
+}
+
+.dropdowns {
+  display: flex;
+  justify-content: center;
 }
