--- a/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
+++ b/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
@@ -43,8 +43,8 @@
   padding-bottom: 5px;
   width: 26%;
 }
-.tagdetailsGreen > button {
-  background-color: #31bb6b;
+.tagdetailsRed > button {
+  background-color: #dc3545;
   color: white;
   outline: none;
   cursor: pointer;
@@ -194,4 +194,28 @@
 .counterHead {
   color: #99abb4;
   margin-bottom: 0rem !important;
+}
+
+.orgDeleteInput  {
+  text-decoration: none;
+  border-color: #dbd7d7;
+  border-style: solid;
+  border-radius: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  box-shadow: none;
+  width: 100%;
+}
+
+.orgDeleteInput:focus {
+  border-color: #fff;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  outline: none;
+}
+
+.orgDelConfirmText {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
