--- a/src/components/OrgPostCard/OrgPostCard.module.css
+++ b/src/components/OrgPostCard/OrgPostCard.module.css
@@ -4,6 +4,9 @@
 .cards > h3 {
   font-size: 17px;
 }
+.postimage {
+  border-radius: 6px;
+}
 .cards > p {
   font-size: 14px;
   margin-top: 0px;
@@ -15,6 +18,12 @@
 }
 .cards a:hover {
   color: black;
+}
+.infodiv {
+  margin-bottom: 7px;
+}
+.infodiv > p {
+  margin: 0;
 }
 .dispflex {
   display: flex;
@@ -29,7 +38,7 @@
 }
 
 .cards {
-  width: 80%;
+  width: 75%;
   background: #fcfcfc;
   margin: 10px 40px;
   padding: 20px 30px;
